Add robots, sitemap, and noscript info

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,13 @@
 <body>
   <script src="/dist/elm.js"></script>
   <script src="/main.js"></script>
+  <noscript>
+    <h1>Odorik Callback</h1>
+    <p>This is a single-page app for initiating callback using
+    <a href="https://www.odorik.cz/w/api">Odorik.cz API</a>, and primarily
+    focused on a reasonable integration with iOS.</p>
+    <p>Of course, without javascript, it won't do you much good,
+    as this is an ELM-based app (= needs javascript).</p>
+  </noscript>
 </body>
 </html>
